--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: matery
+theme: jekyll-theme-cayman
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
