--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -171,7 +171,7 @@ reward:
 copyright:
   enable: false
   minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
-  description: 作者：Seaven \n 来源：68HTML \n 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+  description: 作者：68HTML \n 来源：68HTML \n 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
 # Whether to activate the mathjax, this is a global configuration, but the post still does not open the mathjax rendering.
 # Considering that the mathjax loading is time consuming,
