全局修改作者

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ theme: matery
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:781272544/68HTML-blog.git
+  repo: git@github.com:781272544/Seaven-blog.git
   branch: 68html
   message: 发布并提交git
 
